แก้ mockup หัวข้อบัญชี 7.1-7.7

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-1/int07-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-1/int07-1.component.html
@@ -54,17 +54,17 @@
 
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100">
+          <button class="ui mini primary button">
             <i class="upload icon"></i>
             อัพโหลด
           </button>
-          <button class="ui mini button width-100">
+          <button class="ui mini button">
             <i class="refresh icon"></i>
             ล้างข้อมูล
           </button>
         </div>
       </div>
-
+            
     </div>
   </div>
 </div>
@@ -89,10 +89,7 @@
     <div class="ui grid">
       <div class="three wide column"></div>
       <div class="eight wide column">
-        <button class="ui mini primary button" style="margin-left: -12px;">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
+
       </div>
     </div>
   </div>
@@ -100,14 +97,11 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="six wide column">
-        <button class="ui mini primary button width-100">
+        <button class="ui mini primary button">
           <i class="save icon"></i>
           บันทึก
         </button>
-        <button class="ui mini button width-100" (click)="closePopupAdd()">
-          <i class="close icon"></i>
-          ปิด
-        </button>
+
       </div>
     </div>
   </div>
