--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-4/int07-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-4/int07-4.component.html
@@ -33,20 +33,32 @@
       <span>ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</span>
     </div>
 
+
     <div class="ui attached segment">
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button" routerLink="/int07-5">
-            <i class="arrow right icon"></i>
-            ถัดไป
-          </button>
           <button class="ui mini primary button">
             <i class="print icon"></i>
             พิมพ์
           </button>
+          <button class="ui mini primary button">
+            <i class="save icon"></i>
+            บันทึก
+          </button>
+          <div id="export" class="ui primary buttons">
+            <div class="ui mini button">ส่งออก</div>
+            <div class="ui floating dropdown icon button">
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <div class="item">
+                  <i class="edit icon"></i>PDF</div>
+                <div class="item">
+                  <i class="delete icon"></i>Excel</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
       <br>
       <div style="overflow-x: scroll">
         <table class="ui small celled table" style="width: 130%">
@@ -1180,92 +1192,96 @@
             <th></th>
           </tfoot>
         </table>
+
       </div>
-    </div>
-
-  </div>
-</div>
-
-<div id="modalInt074" class="ui modal small hidden transition">
-  <i class="close icon"></i>
-  <div class="header">
-    บัญชีแยกประเภท
-  </div>
-
-  <div class="content">
-    <div class="ui form">
-      <div class="inline fields">
-        <div class="eight wide field">
-          <label style="width: 9em;">1101010101</label>
-          <label>เงินสดในมือ</label>
-        </div>
-      </div>
-      <br>
-      <div class="inline fields">
-        <div class="eight wide field">
-          <label class="custom-label-w-15">ยอดยกมา</label>
-          <input type="text" value="2603061.29" />
-        </div>
-        <div class="eight wide field">
-          <label class="custom-label-w-15">เดบิต</label>
-          <input type="text" value="1219664529" />
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <div class="eight wide field">
-          <label class="custom-label-w-15">เครดิต</label>
-          <input type="text" value="-1218298224" />
-        </div>
-        <div class="eight wide field">
-          <label class="custom-label-w-15">ยอดยกไป</label>
-          <input type="text" value="3969366.34" />
-        </div>
-      </div>
-
-      <br>
-      <div class="inline fields">
-        <div class="three wide field"></div>
-        <div class="five wide field">
-          <label style="margin-left: -6px;">แยกประเภท</label>
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <div class="eight wide field">
-          <label class="custom-label-w-15">DR</label>
-          <input type="text" value="" />
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <div class="eight wide field">
-          <label class="custom-label-w-15">CR</label>
-          <input type="text" value="" />
-        </div>
-      </div>
-
-      <div class="inline fields">
-        <div class="eight wide field">
-          <label class="custom-label-w-15">Dif</label>
-          <input type="text" value="" />
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="actions">
+    </div><br>
     <div class="ui center aligned grid">
-      <div class="six wide column">
-        <button class="ui mini primary button width-100">
-          <i class="save icon"></i>
-          บันทึก
+      <div class="sixteen wide column">
+        <button class="ui mini primary button " routerLink="/int07-3">
+          <i class="arrow left icon"></i>
+          ย้อนกลับ
         </button>
-        <button class="ui mini button width-100" (click)="closePopupEdit()">
-          <i class="close icon"></i>
-          ปิด
+        <button class="ui mini primary button width-115" routerLink="/int07-5-1">
+          ถัดไป
+          <i class="arrow right icon"></i>
         </button>
       </div>
     </div>
   </div>
-</div>
+
+    <div id="modalInt074" class="ui modal small hidden transition">
+      <i class="close icon"></i>
+      <div class="header">
+        บัญชีแยกประเภท
+      </div>
+
+      <div class="content">
+        <div class="ui form">
+          <div class="inline fields">
+            <div class="eight wide field">
+              <label style="width: 9em;">1101010101</label>
+              <label>เงินสดในมือ</label>
+            </div>
+          </div>
+          <br>
+          <div class="inline fields">
+            <div class="eight wide field">
+              <label class="custom-label-w-15">ยอดยกมา</label>
+              <input type="text" value="2603061.29" />
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-15">เดบิต</label>
+              <input type="text" value="1219664529" />
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="eight wide field">
+              <label class="custom-label-w-15">เครดิต</label>
+              <input type="text" value="-1218298224" />
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-15">ยอดยกไป</label>
+              <input type="text" value="3969366.34" />
+            </div>
+          </div>
+          <br>
+          <div class="inline fields">
+            <div class="eight wide field">
+              <label class="custom-label-w-15">แยกประเภท</label>
+              <input type="text" value="" />
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-15">DR</label>
+              <input type="text" value="" />
+            </div>
+          </div>
+
+          <div class="inline fields">
+            <div class="eight wide field">
+              <label class="custom-label-w-15">CR</label>
+              <input type="text" value="" />
+            </div>
+            <div class="eight wide field">
+              <label class="custom-label-w-15">Dif</label>
+              <input type="text" value="" />
+            </div>
+          </div>
+          <br>
+
+
+          <div class="actions">
+            <div class="ui center aligned grid">
+              <div class="six wide column">
+                <button class="ui mini primary button">
+                  <i class="save icon"></i>
+                  บันทึก
+                </button>
+                <button class="ui mini button" (click)="closePopupEdit()">
+                  <i class="close icon"></i>
+                  ยกเลิก
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
