--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -60,12 +60,13 @@
                     <i class="dropdown icon"></i> บัญชี
                     <div class="menu">
                         <a class="item" [routerLink]="['/int07-1']" routerLinkActive="active">นำเข้าเอกสาร</a>
-                        <a class="item" [routerLink]="['/int07-2']" routerLinkActive="active">ตรวจสอบดุลบัญชีที่แสดงในช่อง "ยอดยกไป" ของงบทดลอง</a>
-                        <a class="item" [routerLink]="['/int07-3']" routerLinkActive="active">ตรวจสอบความสัมพันธ์ของช่อง "เดบิต" "เครดิต" ในงบทดลอง</a>
-                        <a class="item" [routerLink]="['/int07-4']" routerLinkActive="active">ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</a>
-                        <a class="item" [routerLink]="['/int07-5']" routerLinkActive="active">ตรวจสอบเปรียบเทียบบัญชีเคลื่อนไหวเงินฝากคลังกระทบยอด 3 บัญชี</a>
-                        <a class="item" [routerLink]="['/int07-6']" routerLinkActive="active">ตรวจสอบการนำส่งเงินบัญชีเจ้าหนี้ อปท.</a>
-                        <a class="item" [routerLink]="['/int07-7']" routerLinkActive="active">สร้างกระดาษทำการเงินฝากคลัง</a>
+                        <a class="item" [routerLink]="['/int07-2']" routerLinkActive="active">ตรวจสอบดุลบัญชียอดยกไป</a>                        
+                        <a class="item" [routerLink]="['/int07-3']" routerLinkActive="active">ตรวจสอบข้อมูลบัญชี </a>                       
+                        <a class="item" [routerLink]="['/int07-4']" routerLinkActive="active">ตรวจสอบงบทดลองกระทบยอด 4 บัญชีแยกประเภท   </a>                     
+                        <a class="item" [routerLink]="['/int07-5']" routerLinkActive="active">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง  </a>                      
+                        <a class="item" [routerLink]="['/int07-6']" routerLinkActive="active">ตรวจการนำส่งเงินบัญชีเจ้าหนี้ อปท.</a>                        
+                        <a class="item" [routerLink]="['/int07-7']" routerLinkActive="active">รายงานเคลื่อนไหวเงินฝากคลัง </a>
+                       
                     </div>
                 </div>
                 <div class="ui simple dropdown item">
