--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -37,8 +37,8 @@
                         <div class="ui dropdown item">
                             <i class="dropdown icon"></i> ตรวจสอบแสตมป์
                             <div class="menu">
-                                <a class="item" [routerLink]="['/int05-1']" routerLinkActive="active">เปรียบเทียบรวมทั้งปีงบประมาณ</a>
-                                <a class="item" [routerLink]="['/int05-2']" routerLinkActive="active">เปรียบเทียบรายสาขา</a>
+                                <a class="item" [routerLink]="['/int05-1']" routerLinkActive="active">ตรวจแสตมป์พื้นที่</a>
+                                <a class="item" [routerLink]="['/int05-2']" routerLinkActive="active">ตรวจสอบพื้นที่ สาขา</a>
                             </div>
                         </div>
                         <a class="item" [routerLink]="['/int05-3']" routerLinkActive="active">ตรวจสอบสินทรัพย์</a>
@@ -60,13 +60,13 @@
                     <i class="dropdown icon"></i> บัญชี
                     <div class="menu">
                         <a class="item" [routerLink]="['/int07-1']" routerLinkActive="active">นำเข้าเอกสาร</a>
-                        <a class="item" [routerLink]="['/int07-2']" routerLinkActive="active">ตรวจสอบดุลบัญชียอดยกไป</a>                        
-                        <a class="item" [routerLink]="['/int07-3']" routerLinkActive="active">ตรวจสอบข้อมูลบัญชี </a>                       
-                        <a class="item" [routerLink]="['/int07-4']" routerLinkActive="active">ตรวจสอบงบทดลองกระทบยอด 4 บัญชีแยกประเภท   </a>                     
-                        <a class="item" [routerLink]="['/int07-5']" routerLinkActive="active">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง  </a>                      
-                        <a class="item" [routerLink]="['/int07-6']" routerLinkActive="active">ตรวจการนำส่งเงินบัญชีเจ้าหนี้ อปท.</a>                        
+                        <a class="item" [routerLink]="['/int07-2']" routerLinkActive="active">ตรวจสอบดุลบัญชียอดยกไป</a>
+                        <a class="item" [routerLink]="['/int07-3']" routerLinkActive="active">ตรวจสอบข้อมูลบัญชี </a>
+                        <a class="item" [routerLink]="['/int07-4']" routerLinkActive="active">ตรวจสอบงบทดลองกระทบยอด 4 บัญชีแยกประเภท </a>
+                        <a class="item" [routerLink]="['/int07-5']" routerLinkActive="active">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง </a>
+                        <a class="item" [routerLink]="['/int07-6']" routerLinkActive="active">ตรวจการนำส่งเงินบัญชีเจ้าหนี้ อปท.</a>
                         <a class="item" [routerLink]="['/int07-7']" routerLinkActive="active">รายงานเคลื่อนไหวเงินฝากคลัง </a>
-                       
+
                     </div>
                 </div>
                 <div class="ui simple dropdown item">
@@ -99,6 +99,7 @@
                 <a class="item" [routerLink]="['/userManagement']" routerLinkActive="active">UserManamgement</a>
             </div>
         </div>
+
         <div class="right menu">
             <div class="ui dropdown item">
                 <input type="hidden" name="gender">
