--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-2/int05-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-2/int05-2.component.html
@@ -52,6 +52,10 @@
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
+            <button class="ui mini primary button">
+                <i class="add icon"></i>
+                เพิ่มข้อมูล
+              </button>
           </div>
         </div>
 
