--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -69,7 +69,13 @@
     <div *ngIf="showData">        
       <div class="ui attached segment">
         <div class="ui right aligned grid">
-          <div class="sixteen wide column">
+            <div class="sixteen wide column">
+                <button class="ui mini primary button" routerLink="/int05-1">
+                  ตรวจแสตมป์รายเดือน	
+                </button>
+                <button class="ui mini primary button" routerLink="/int05-1-1">
+                  ตรวจแสตมป์รายปีงบประมาณ	
+                </button>
             <button class="ui mini primary button">
               <i class="print icon"></i>
               พิมพ์
@@ -93,6 +99,7 @@
           </div>
         </div>
         <br>
+
         <div class="ui grid center aligned">
           <div class="sixteen wide column">
             บันทึกการรับ-จ่ายแสตมป์
