--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -1,11 +1,7 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">ตรวจแสตมป์เปรียบเทียบรวมทั้งปีงบประมาณ</h2>
-
-    <div class="ui top attached header">
-      <span>ตรวจสแตมป์ปีงบปะมาณ</span>
-    </div>
-
+  
+  
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
@@ -66,16 +62,21 @@
       </div>
     </div>
     <br>
-    <div *ngIf="showData">        
+
+    <div *ngIf="showData">    
+        <h2 class="ui header">ตรวจแสตมป์รายปีงบประมาณ	</h2>       
+
+        <div class="ui tabular menu ">
+            <a class="item active " routerLink="/int05-1">
+              ตรวจแสตมป์รายเดือน	
+            </a>  
+            <a class="item  " routerLink="/int05-1-1">
+              ตรวจแสตมป์รายปีงบประมาณ	
+            </a>
+        </div>    
       <div class="ui attached segment">
         <div class="ui right aligned grid">
-            <div class="sixteen wide column">
-                <button class="ui mini primary button" routerLink="/int05-1">
-                  ตรวจแสตมป์รายเดือน	
-                </button>
-                <button class="ui mini primary button" routerLink="/int05-1-1">
-                  ตรวจแสตมป์รายปีงบประมาณ	
-                </button>
+            <div class="sixteen wide column">              
             <button class="ui mini primary button">
               <i class="print icon"></i>
               พิมพ์
