--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-3/int05-3.component.html
@@ -44,14 +44,40 @@
  
   <br>
  
-    <div class="ui segment" *ngIf="showData">
-        <div class="ui grid center aligned">
-            <div class="sixteen wide column">
-             รายงานยอดสินทรัพย์คงเหลือ
-              <br>หน่วยเบิกจ่าย 0300600233 สำนักงานสรรพสามิตพื้นที่สมุทรสาคร	
-              <br> งบประมาณปี 2560
+    <div class="ui segment" *ngIf="showData">        
+            <div class="ui right aligned grid">
+              <div class="sixteen wide column">
+                <button class="ui mini primary button">
+                  <i class="print icon"></i>
+                  พิมพ์
+                </button>
+                <button class="ui mini primary button">
+                  <i class="save icon"></i>
+                  บันทึก
+                </button>
+                <div id="export" class="ui primary buttons">
+                  <div class="ui mini button">ส่งออก</div>
+                  <div class="ui floating dropdown icon button">
+                    <i class="dropdown icon"></i>
+                    <div class="menu">
+                      <div class="item">
+                        <i class="file pdf outline icon"></i> PDF</div>
+                      <div class="item">
+                        <i class="file excel outline icon"></i>Excel</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
+          <br>         
+        <div class="ui grid center aligned">
+          <div class="sixteen wide column">
+           บันทึกการับ-จ่ายแสตมป์
+            <br>สำนักงานสรรพสามิตภาคที่ 5 พื้นที่ลำปาง	
+            <br> งบประมาณปี 2560
           </div>
+        </div>
+        <br>
         <div style="overflow-x: scroll">
             <table class="ui small celled table" style="width: 190%">
               <thead>
